# mirror-docs

./: .gitignore  00-mirror.sh  01-md.py  02-sitemap.sh  README.md  mirror_docs.py  pyproject.toml
.clinerules/: 00-memory-bank.md  01a-shortcuts.md  99-mirror-docs.md
.github/workflows/: publish.yaml  publish.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
